# ml-services-hub

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  config.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
models/: gender_cnn.h5
sample_data/: clustering_sample.csv  transactions_sample.csv
scripts/: preload_models.py
services/: __init__.py  apriori_service.py  dbscan_service.py  evaluate_fairness.py  gender_cnn_service.py  kmeans_service.py  ner_service.py  prepare_gender_data.py  qa_service.py  sentiment_service.py  textgen_service.py  train_gender_cnn.py  translation_service.py
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html
templates/services/: apriori.html  dbscan.html  gender.html  kmeans.html  ner.html  qa.html  sentiment.html  textgen.html  translation.html
tests/: conftest.py  test_ml_services.py  test_routes.py
utils/: audio.py  files.py  plotting.py
